Fix bug 469840 - Recurring Sundays incorrect (regression). r=philipp